--- a/Design.css
+++ b/Design.css
@@ -21,7 +21,7 @@
 }
 
 body {
-    background-color: rgb(41, 41, 41);
+    background-color: #272727;  
     font-family: 'Open Sans', sans-serif;
     color: antiquewhite;
     margin-top: 2%;
@@ -46,7 +46,7 @@ header {
 
 }
 
-.nav a {
+.about {
     color: antiquewhite;
     text-decoration: none !important;
     border-color: rgba(255, 255, 255, 0.692);
@@ -57,15 +57,50 @@ header {
     transition: background-color 0.5s ease-in-out;
 }
 
-.nav a:hover {
+.about:hover {
+    background-color: rgb(255, 255, 255);
+    color: black;
+}
+
+.family {
+    color: antiquewhite;
+    text-decoration: none !important;
+    border-color: rgba(255, 255, 255, 0.692);
+    border-width: 2px;
+    border-style: solid;
+    border-radius: 50px;
+    padding: 12px;
+    transition: background-color 0.5s ease-in-out;
+}
+
+.family:hover {
+    background-color: rgb(255, 255, 255);
+    color: black;
+}
+
+.sources {
+    color: antiquewhite;
+    text-decoration: none !important;
+    border-color: rgba(255, 255, 255, 0.692);
+    border-width: 2px;
+    border-style: solid;
+    border-radius: 50px;
+    padding: 12px;
+    transition: background-color 0.5s ease-in-out;
+}
+
+.sources:hover {
     background-color: rgb(255, 255, 255);
     color: black;
 }
 
 .home {
-    margin-right: 55%;
+    width: 100px;
+    height: 100px;
 }
-
+.hm{
+    margin-right: 50%;
+}
 .gpu4090 {
     display: flex;
     align-items: center;
@@ -77,7 +112,7 @@ header {
     -webkit-filter: drop-shadow(5px 5px 5px #3b3b3b);
     filter: drop-shadow(5px 5px 5px #3b3b3b);
     transform: rotate(0deg);
-    transition: transform 0.5s ease-in-out ,-webkit-filter 0.5s ease-in-out, filter 0.5s ease-in-out;
+    transition: transform 0.5s ease-in-out, -webkit-filter 0.5s ease-in-out, filter 0.5s ease-in-out;
     animation: 0.5s ease-out 0s 1 slideInFromLeft;
 }
 
@@ -98,7 +133,7 @@ header {
     -webkit-filter: drop-shadow(5px 5px 5px #3b3b3b);
     filter: drop-shadow(5px 5px 5px #3b3b3b);
     transform: rotate(0deg);
-    transition: transform 0.5s ease-in-out ,-webkit-filter 0.5s ease-in-out, filter 0.5s ease-in-out;
+    transition: transform 0.5s ease-in-out, -webkit-filter 0.5s ease-in-out, filter 0.5s ease-in-out;
     animation: 0.5s ease-out 0s 1 slideInFromRight;
 }
 
@@ -119,7 +154,7 @@ header {
     -webkit-filter: drop-shadow(5px 5px 5px #3b3b3b);
     filter: drop-shadow(5px 5px 5px #3b3b3b);
     transform: rotate(0deg);
-    transition: transform 0.5s ease-in-out ,-webkit-filter 0.5s ease-in-out, filter 0.5s ease-in-out;
+    transition: transform 0.5s ease-in-out, -webkit-filter 0.5s ease-in-out, filter 0.5s ease-in-out;
     animation: 0.5s ease-out 0s 1 slideInFromLeft;
 }
 
