Video instead of gif

--- a/Design.css
+++ b/Design.css
@@ -21,7 +21,7 @@
 }
 
 body {
-    background-color: #272727;  
+    background-color: rgb(42, 40, 42);  
     font-family: 'Open Sans', sans-serif;
     color: antiquewhite;
     margin-top: 1%;
