--- a/Design_cart.css
+++ b/Design_cart.css
@@ -101,6 +101,7 @@ header {
     text-decoration: none !important;
     font-size:20px;
     margin:2%;
+    margin-left:5%;
     }
 @media (max-width:1250px){
     .about{
