--- a/Design_cart.css
+++ b/Design_cart.css
@@ -94,6 +94,7 @@ header {
     border-style: solid;
     border-radius: 2px;
     width: 100%;
+    height:8px;
     }
 .cart_down{
     font-family: 'Open Sans', sans-serif;
