--- a/Design_cart.css
+++ b/Design_cart.css
@@ -103,6 +103,7 @@ header {
     font-size:20px;
     margin:2%;
     margin-left:5%;
+    margin-top:3%;
     }
 @media (max-width:1250px){
     .about{
