--- a/Design.css
+++ b/Design.css
@@ -108,6 +108,22 @@ header {
     margin-right: 50%;
     cursor: pointer;
 }
+
+.hm_mob_img {
+    display:none;
+    width: 100px;
+    height: 100px;
+    transition: width 0.5s ease-in-out, height 0.5s ease-in-out;
+}
+.hm_mob_img:hover{
+    width: 110px;
+    height: 110px;
+}
+.hm_mob{
+    margin-right: 50%;
+    cursor: pointer;
+    display:none;
+}
 .gpu4090 {
     display: flex;
     align-items: center;
