--- a/Design_cart.css
+++ b/Design_cart.css
@@ -92,18 +92,19 @@ header {
     border-width: 3px;
     border-color: rgb(255, 255, 255);
     border-style: solid;
-    border-radius: 2px;
+    border-radius: 50px;
     width: 100%;
-    height:8px;
+    height:25px;
+    background-color: black;
     }
 .cart_down{
     font-family: 'Open Sans', sans-serif;
     color: antiquewhite;
     text-decoration: none !important;
     font-size:20px;
-    margin:2%;
     margin-left:5%;
-    margin-top:3%;
+    margin-top: 16%;
+    transform: translateY(-5%);
     }
 @media (max-width:1250px){
     .about{
@@ -114,5 +115,8 @@ header {
     }
     .sources{
         display: none;
+    }
+    .cart{
+        height:12px;
     }
 }
