--- a/Design.css
+++ b/Design.css
@@ -43,7 +43,7 @@ header {
     justify-content: space-between;
     color: antiquewhite;
     align-items: center;
-
+    text-decoration: none !important;
 }
 
 .about {
@@ -199,8 +199,57 @@ header {
     animation: 0.5s ease-out 0s 1 slideInFromRight;
 }
 
+.about_mobile{
+    text-decoration: none !important;
+    color: antiquewhite;
+    border-color: rgba(255, 255, 255, 0.692);
+    border-width: 2px;
+    border-style: solid;
+    border-radius: 50px;
+    padding: 10px;
+    font-size: 25px;
+    transition: background-color 0.5s ease-in-out;
+}
 
+.family_mobile{
+    text-decoration: none !important;
+    color: antiquewhite;
+    border-color: rgba(255, 255, 255, 0.692);
+    border-width: 2px;
+    border-style: solid;
+    border-radius: 50px;
+    padding: 10px;
+    font-size: 25px;
+    transition: background-color 0.5s ease-in-out;
+}
 
+.sources_mobile{
+    text-decoration: none !important;
+    color: antiquewhite;
+    border-color: rgba(255, 255, 255, 0.692);
+    border-width: 2px;
+    border-style: solid;
+    border-radius: 50px;
+    padding: 10px;
+    font-size: 25px;
+    transition: background-color 0.5s ease-in-out;
+}
+
+.about_mobile:hover {
+    background-color: rgb(255, 255, 255);
+    color: black;
+}
+.family_mobile:hover {
+    background-color: rgb(255, 255, 255);
+    color: black;
+}
+.sources_mobile:hover {
+    background-color: rgb(255, 255, 255);
+    color: black;
+}
+.main_mobile{
+    display: none;
+}
 .footer {
     display: flex;
     align-items: center;
@@ -233,4 +282,7 @@ header {
     .hm_mob_pic{
         display:initial;
         }
+    .main_mobile{
+        display: initial;
+    }
 }
