--- a/Design_cp.css
+++ b/Design_cp.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
 
 body {
-    background-color: rgb(42, 40, 42);   
+    background-color: rgb(42, 40, 42);  
     font-family: 'Open Sans', sans-serif;
     color: antiquewhite;
     margin-top: 1%;
@@ -86,4 +86,96 @@ header {
 }
 .hm{
     margin-right: 50%;
+}
+.about_mobile{
+    text-decoration: none !important;
+    color: antiquewhite;
+    border-color: rgba(255, 255, 255, 0.692);
+    border-width: 2px;
+    border-style: solid;
+    border-radius: 50px;
+    padding: 10px;
+    font-size: 25px;
+    transition: background-color 0.5s ease-in-out;
+}
+
+.family_mobile{
+    text-decoration: none !important;
+    color: antiquewhite;
+    border-color: rgba(255, 255, 255, 0.692);
+    border-width: 2px;
+    border-style: solid;
+    border-radius: 50px;
+    padding: 10px;
+    font-size: 25px;
+    transition: background-color 0.5s ease-in-out;
+}
+
+.sources_mobile{
+    text-decoration: none !important;
+    color: antiquewhite;
+    border-color: rgba(255, 255, 255, 0.692);
+    border-width: 2px;
+    border-style: solid;
+    border-radius: 50px;
+    padding: 10px;
+    font-size: 25px;
+    transition: background-color 0.5s ease-in-out;
+}
+
+.about_mobile:hover {
+    background-color: rgb(255, 255, 255);
+    color: black;
+}
+.family_mobile:hover {
+    background-color: rgb(255, 255, 255);
+    color: black;
+}
+.sources_mobile:hover {
+    background-color: rgb(255, 255, 255);
+    color: black;
+}
+.main_mobile{
+    display: none;
+}
+.hm_mob_pic {
+    display:none;
+    width: 100px;
+    height: 100px;
+    transition: width 0.5s ease-in-out, height 0.5s ease-in-out;
+}
+.hm_mob_pic:hover{
+    width: 110px;
+    height: 110px;
+}
+.hm_mob{
+    margin-right: 50%;
+    cursor: pointer;
+    display:none;
+}
+@media (max-width:1250px){
+    .about{
+        display: none;
+    }
+    .family{
+        display: none;
+    }
+    .sources{
+        display: none;
+    }
+    .home{
+        display:none;
+        }
+    .hm{
+        display:none;
+        }
+    .hm_mob{
+        display:initial;
+        }
+    .hm_mob_pic{
+        display:initial;
+        }
+    .main_mobile{
+        display: initial;
+    }
 }
