--- a/Design_history.css
+++ b/Design_history.css
@@ -144,6 +144,15 @@ header {
     cursor: pointer;
     display:none;
 }
+.osx .hm{
+    display: none;
+}
+.osx .hm_mob{
+    display: initial;
+}
+.osx .hm_mob_pic{
+    display: initial;
+}
 @media (max-width:1250px){
     .about{
         display: none;
