--- a/Design_history.css
+++ b/Design_history.css
@@ -19,12 +19,12 @@
         transform: translateX(0);
     }
 }
-@keyframes fadeIn {
+@keyframes changeLine {
 	from {
-		opacity: 0;
+		height: 0px;
 	}
 	to {
-		opacity: 1;
+		height: 260px;
 	}
 }
 body {
@@ -192,6 +192,15 @@ header {
 }
 .g256{
     animation: 1s ease-out 0s 1 slideInFromLeft;
+    -webkit-filter: drop-shadow(5px 5px 5px #3b3b3b);
+    filter: drop-shadow(5px 5px 5px #3b3b3b);
+    transform: rotate(0deg);
+    transition: transform 0.5s ease-in-out, -webkit-filter 0.5s ease-in-out, filter 0.5s ease-in-out;
+}
+.g256:hover{
+    -webkit-filter: drop-shadow(5px 5px 5px #474747);
+    filter: drop-shadow(5px 5px 5px #474747);
+    transform: rotate(-7deg);
 }
 .firstgpu{
     padding-left: 7%;
@@ -209,6 +218,15 @@ header {
 }
 .sa5570{
     animation: 1s ease-out 0s 1 slideInFromRight;
+    -webkit-filter: drop-shadow(5px 5px 5px #3b3b3b);
+    filter: drop-shadow(5px 5px 5px #3b3b3b);
+    transform: rotate(0deg);
+    transition: transform 0.5s ease-in-out, -webkit-filter 0.5s ease-in-out, filter 0.5s ease-in-out;
+}
+.sa5570:hover{
+    -webkit-filter: drop-shadow(5px 5px 5px #474747);
+    filter: drop-shadow(5px 5px 5px #474747);
+    transform: rotate(7deg);
 }
 .firstgpu-right{
     padding-left: 7%;
@@ -222,11 +240,21 @@ header {
     position: absolute;
     width: 60%;
     height: 260px;
-    z-index: -1;
+    z-index: -2;
     padding-left: 25%;
-    display: inline;
     transform: translateY(-75%);
-    animation: fadeIn 1s ease-in both;
+    animation: 1s ease-out 0.25s 1 changeLine;
+
+}
+.footer {
+    margin-top: 2px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background-color: #131313;
+    min-height: 5vh;
+    padding-left: 2%;
+    padding-right: 2%;
 }
 @media (max-width:1250px){
     .about{
@@ -252,5 +280,14 @@ header {
         }
     .main_mobile{
         display: initial;
+    }
+    .left-line{
+        display: none;
+    }
+    .sa5570{
+        width: 100%;
+    }
+    .txt5570{
+        width: 90%;
     }
 }
