--- a/Design_history.css
+++ b/Design_history.css
@@ -102,18 +102,7 @@ header {
     color: black;
 }
 
-.home {
-    width: 100px;
-    height: 100px;
-    transition: width 0.5s ease-in-out, height 0.5s ease-in-out;
-}
-.home:hover{
-    width: 110px;
-    height: 110px;
-}
-.hm{
-    margin-right: 50%;
-}
+
 .about_mobile{
     text-decoration: none !important;
     color: antiquewhite;
@@ -156,15 +145,31 @@ header {
 .main_mobile{
     display: none;
 }
+.home {
+    width: 100px;
+    height: 100px;
+    border-radius: 0;
+    border-color: antiquewhite;
+    transition: border-radius 0.5s ease-in-out;
+}
+
+.home:hover{
+    border-radius: 2px;
+}
+.hm{
+    margin-right: 50%;
+    cursor: pointer;
+}
+
 .hm_mob_pic {
     display:none;
     width: 100px;
     height: 100px;
-    transition: width 0.5s ease-in-out, height 0.5s ease-in-out;
+    transition: background-color 0.5s ease-in-out;
 }
 .hm_mob_pic:hover{
-    width: 110px;
-    height: 110px;
+    background-color: antiquewhite;
+    border-radius: 2px;
 }
 .hm_mob{
     margin-right: 50%;
@@ -256,13 +261,13 @@ header {
     padding-left: 2%;
     padding-right: 2%;
 }
-.transition-move{
+/* .transition-move{
     transition: 1s;
     opacity: 1;
 }
 html.is-animating .transition-move{
     opacity: 0;
-}
+} */
 @media (max-width:1250px){
     .about{
         display: none;
