--- a/Design_history.css
+++ b/Design_history.css
@@ -261,13 +261,13 @@ header {
     padding-left: 2%;
     padding-right: 2%;
 }
-/* .transition-move{
+.transition-move2{
     transition: 1s;
     opacity: 1;
 }
-html.is-animating .transition-move{
+html.is-animating .transition-move2{
     opacity: 0;
-} */
+}
 @media (max-width:1250px){
     .about{
         display: none;
