--- a/Design_history.css
+++ b/Design_history.css
@@ -261,11 +261,11 @@ header {
     padding-left: 2%;
     padding-right: 2%;
 }
-.transition-move{
-    transition: 1s;
+.transition-fade{
     opacity: 1;
+    transition: 1s;
 }
-html.is-animating .transition-move{
+html.is-animating .transition-fade{
     opacity: 0;
 }
 @media (max-width:1250px){
