removed scroll bar

--- a/Design_cart.css
+++ b/Design_cart.css
@@ -73,7 +73,9 @@ header {
     padding: 12px;
     transition: background-color 0.5s ease-in-out;
 }
-
+html::-webkit-scrollbar {
+    display: none;
+}
 .family:hover {
     background-color: rgb(255, 255, 255);
     color: black;
