--- a/Design_history.css
+++ b/Design_history.css
@@ -227,6 +227,8 @@ header {
     filter: drop-shadow(5px 5px 5px #3b3b3b);
     transform: rotate(0deg);
     transition: transform 0.5s ease-in-out, -webkit-filter 0.5s ease-in-out, filter 0.5s ease-in-out;
+    margin-right: 2%;
+    width: 600px;
 }
 .sa5570:hover{
     -webkit-filter: drop-shadow(5px 5px 5px #474747);
@@ -310,5 +312,8 @@ html, body {
     }
     .txt5570{
         width: 90%;
+    }
+    .sa5570{
+        width: 100%;
     }
 }
