--- a/Design.css
+++ b/Design.css
@@ -24,13 +24,14 @@ body {
     background-color: rgb(42, 40, 42);  
     font-family: 'Open Sans', sans-serif;
     color: antiquewhite;
-    margin-top: 1%;
+    margin-top: 0;
     margin-left: 0;
     margin-right: 0;
     margin-bottom: 0;
 }
 
 .main {
+    margin-top: 1%;
     margin-left: 5%;
     margin-right: 5%;
 }
@@ -339,4 +340,67 @@ html::-webkit-scrollbar {
     .gpu3080{
         display: none;
     }
+}
+#preloader{
+    background-color:black ;
+    height: 100%;
+    width: 100%;
+    position: fixed;
+    z-index: 100;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.content {
+    margin-bottom: 10%;
+	position: relative;
+    font-family: 'Open Sans', sans-serif;
+}
+
+.content h2 {
+	color: #fff;
+	font-size: 6em;
+	position: absolute;
+	transform: translate(-50%, -50%);
+}
+
+.content h2:nth-child(1) {
+	color: transparent;
+	-webkit-text-stroke: 2px #03a9f4;
+}
+
+.content h2:nth-child(2) {
+	color: #03a9f4;
+	animation: animate 4s ease-in-out infinite;
+}
+
+@keyframes animate {
+	0%,
+	100% {
+		clip-path: polygon(
+			0% 45%,
+			16% 44%,
+			33% 50%,
+			54% 60%,
+			70% 61%,
+			84% 59%,
+			100% 52%,
+			100% 100%,
+			0% 100%
+		);
+	}
+
+	50% {
+		clip-path: polygon(
+			0% 60%,
+			15% 65%,
+			34% 66%,
+			51% 62%,
+			67% 50%,
+			84% 45%,
+			100% 46%,
+			100% 100%,
+			0% 100%
+		);
+	}
 }
