--- a/Design_history.css
+++ b/Design_history.css
@@ -268,7 +268,7 @@ header {
     padding-left: 25%;
     transform: translateY(-75%);
     animation: 1s ease-out 0.25s 1 changeLine;
-
+    display: none;
 }
 .footer {
     margin-top: 2px;
