--- a/Design_history.css
+++ b/Design_history.css
@@ -193,12 +193,18 @@ header {
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-bottom: 15%;
+    margin-bottom: 8%;
 }
 .gf256_mob {
     display: none;
     align-items: center;
     justify-content: center;
+    margin-bottom: 4%;
+}
+.divider{
+    width: 100%;
+    height: 1px;
+    background-color: antiquewhite;
     margin-bottom: 10%;
 }
 .g256{
@@ -229,14 +235,14 @@ header {
     align-items: center;
     justify-content: center;
     z-index: 1;
-    margin-bottom: 15%;
+    margin-bottom: 10%;
 }
 .sap5570_mob {
     display: none;
     align-items: center;
     justify-content: center;
     z-index: 1;
-    margin-bottom: 10%;
+    margin-bottom: 5%;
 }
 .sa5570{
     animation: 1s ease-out 0s 1 slideInFromRight;
